--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReviewShield</title>
-</head>
+<div th:replace="fragments/head :: head">
+</div>
 <body>
 <h1>Hello world</h1>
-<h1 th:text="|Name of the current user is ${Name}|"></h1>
+<h1 class="text-red-600" th:text="|Name of the current user is ${Name}|"></h1>
 </body>
 </html>
