created the navbar component

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <div th:replace="fragments/head :: head">
 </div>
 <body>
+<div th:replace="fragments/navbar :: header"></div>
 <h1>Hello world</h1>
 <h1 class="text-red-600" th:text="|Name of the current user is ${Name}|"></h1>
 </body>
