created the review controller and added a home page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,13 @@
 </div>
 <body>
 <div th:replace="fragments/navbar :: header"></div>
-<h1>Hello world</h1>
-<h1 class="text-red-600" th:text="|Name of the current user is ${Name}|"></h1>
+<div class="w-full bg-center bg-cover h-[38rem]" style="background-image: url('https://images.unsplash.com/photo-1556761175-b413da4baf72?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80'); min-height: calc(100vh - 60px);" >
+    <div class="flex items-center justify-center w-full h-full bg-gray-900/40">
+        <div class="text-center">
+            <h1 class="text-3xl font-semibold text-white lg:text-4xl">Review Shield</h1>
+            <button class="w-full px-5 py-2 mt-4 text-sm font-medium text-white capitalize transition-colors duration-300 transform bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">View Reviews</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
