--- a/src/main/resources/templates/pages/reviews.html
+++ b/src/main/resources/templates/pages/reviews.html
@@ -4,6 +4,60 @@
 </div>
 <body>
 <div th:replace="fragments/navbar :: header"></div>
+<div class="grid grid-cols-3 gap-6 p-8">
+    <div th:each="review : ${reviews}" class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md none:bg-gray-800">
 
+        <div class="p-6">
+            <div>
+                <div class="flex justify-between p-4">
+                    <span class="text-xs font-medium text-blue-600 uppercase none:text-blue-400">Review</span>
+                    <div class="flex gap-2">
+                        <form th:action="@{/reviews/delete/{id}}" method="post" th:object="${review}" th:method="post">
+                            <button type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="25" height="25" viewBox="0 0 256 256" xml:space="preserve">
+
+<defs>
+</defs>
+                                    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" >
+	<circle cx="45" cy="45" r="45" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(230,62,50); fill-rule: nonzero; opacity: 1;" transform="  matrix(1 0 0 1 0 0) "/>
+                                        <path d="M 65.592 29.574 h -5.395 h -3.776 v -3.481 c 0 -3.635 -2.957 -6.593 -6.593 -6.593 h -9.656 c -3.635 0 -6.593 2.958 -6.593 6.593 v 3.481 h -3.777 h -5.394 c -1.104 0 -2 0.896 -2 2 s 0.896 2 2 2 h 3.394 V 60.41 c 0 5.563 4.526 10.09 10.09 10.09 h 14.215 c 5.563 0 10.09 -4.526 10.09 -10.09 V 33.574 h 3.395 c 1.104 0 2 -0.896 2 -2 S 66.696 29.574 65.592 29.574 z M 37.579 26.093 c 0 -1.43 1.163 -2.593 2.593 -2.593 h 9.656 c 1.43 0 2.593 1.163 2.593 2.593 v 3.481 H 37.579 V 26.093 z M 58.197 60.41 c 0 3.358 -2.731 6.09 -6.09 6.09 H 37.892 c -3.358 0 -6.09 -2.731 -6.09 -6.09 V 33.574 h 3.777 h 18.842 h 3.776 V 60.41 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                                        <path d="M 40.3 39.566 c -1.104 0 -2 0.896 -2 2 V 56.78 c 0 1.104 0.896 2 2 2 s 2 -0.896 2 -2 V 41.566 C 42.3 40.462 41.404 39.566 40.3 39.566 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                                        <path d="M 49.7 39.566 c -1.104 0 -2 0.896 -2 2 V 56.78 c 0 1.104 0.896 2 2 2 s 2 -0.896 2 -2 V 41.566 C 51.7 40.462 50.805 39.566 49.7 39.566 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+</g>
+</svg>
+                            </button>
+                        </form>
+                        <form th:action="@{/reviews/update/{id}}" method="post" th:object="${review}" th:method="post">
+                            <button type="submit">
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="25" height="25" viewBox="0 0 256 256" xml:space="preserve">
+
+<defs>
+</defs>
+                                    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(1.4065934065934016 1.4065934065934016) scale(2.81 2.81)" >
+	<circle cx="45" cy="45" r="45" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(32,143,232); fill-rule: nonzero; opacity: 1;" transform="  matrix(1 0 0 1 0 0) "/>
+                                        <path d="M 69.913 67.417 l -5.059 -16.592 c -0.007 -0.022 -0.021 -0.041 -0.028 -0.063 c -0.035 -0.102 -0.08 -0.201 -0.132 -0.297 c -0.02 -0.038 -0.037 -0.077 -0.06 -0.114 c -0.079 -0.126 -0.169 -0.247 -0.279 -0.357 L 37.047 22.685 c -3.574 -3.574 -9.39 -3.574 -12.964 0 l -1.398 1.398 c -3.574 3.574 -3.574 9.39 0 12.964 l 27.309 27.309 c 0.11 0.11 0.231 0.2 0.357 0.279 c 0.037 0.023 0.076 0.039 0.114 0.06 c 0.097 0.052 0.195 0.097 0.297 0.132 c 0.022 0.008 0.041 0.021 0.063 0.028 l 16.592 5.059 C 67.608 69.972 67.805 70 68 70 c 0.522 0 1.033 -0.205 1.414 -0.586 C 69.937 68.892 70.129 68.124 69.913 67.417 z M 25.513 26.911 l 1.398 -1.398 c 2.016 -2.015 5.293 -2.014 7.308 0 l 25.895 25.895 l -8.705 8.705 L 25.513 34.219 C 23.499 32.204 23.499 28.926 25.513 26.911 z M 55.178 62 L 62 55.178 l 2.992 9.814 L 55.178 62 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+</g>
+</svg>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+
+                <a th:text="${review.title}" class="block mt-2 text-xl font-semibold text-gray-800 transition-colors duration-300 transform none:text-white hover:text-gray-600 hover:underline" tabindex="0" role="link"></a>
+                <p th:text="${review.message}" class="mt-2 text-sm text-gray-600 none:text-gray-400"></p>
+            </div>
+
+            <div class="mt-4">
+                <div class="flex items-center">
+                    <div class="flex items-center">
+                        <a th:text="${review.user.getUsername()}" class="mx-2 font-semibold text-gray-700 none:text-gray-200" tabindex="0" role="link"></a>
+                    </div>
+                    <span class="mx-1 text-xs text-gray-600 none:text-gray-300">21 SEP 2015</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
