--- a/src/main/resources/templates/pages/add.html
+++ b/src/main/resources/templates/pages/add.html
@@ -5,5 +5,44 @@
 <body>
 <div th:replace="fragments/navbar :: header"></div>
 
+<form th:action="@{reviews/add}" method="POST" th:object="${review}" class="space-y-8 divide-y divide-gray-200 p-8">
+    <div class="space-y-8 divide-y divide-gray-200">
+        <div>
+            <div>
+                <h3 class="text-lg leading-6 font-medium text-gray-900">Add Review</h3>
+            </div>
+
+            <div class="mt-6 w-full grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
+                <div class="sm:col-span-6">
+                    <label for="title" class="block text-sm font-medium text-gray-700"> Title </label>
+                    <div class="mt-1">
+                        <input th:field="*{title}" placeholder="Enter title" id="title" name="message" class="shadow-sm focus:ring-indigo-500 px-4 py-2 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md">
+                    </div>
+
+                </div>
+
+<!--                <input type="hidden" th:value="">-->
+
+                <div class="sm:col-span-6">
+                    <label for="message" class="block text-sm font-medium text-gray-700"> Message </label>
+                    <div class="mt-1">
+                        <textarea th:field="*{message}" id="message" name="message" rows="3" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="pt-5">
+        <div class="flex justify-end">
+            <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Save</button>
+        </div>
+    </div>
+</form>
+
+
 </body>
 </html>
