--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <div class="flex items-center justify-center w-full h-full bg-gray-900/40">
         <div class="text-center">
             <h1 class="text-3xl font-semibold text-white lg:text-4xl">Review Shield</h1>
-            <button class="w-full px-5 py-2 mt-4 text-sm font-medium text-white capitalize transition-colors duration-300 transform bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500">View Reviews</button>
+            <button class="w-full px-5 py-2 mt-4 text-sm font-medium text-white capitalize transition-colors duration-300 transform bg-blue-600 rounded-md lg:w-auto hover:bg-blue-500 focus:outline-none focus:bg-blue-500"><a th:href="@{reviews}">Views Reviews</a></button>
         </div>
     </div>
 </div>
