--- a/src/main/resources/templates/pages/reviews.html
+++ b/src/main/resources/templates/pages/reviews.html
@@ -55,7 +55,7 @@
                     </div>
                     <span class="mx-1 text-xs text-gray-600 none:text-gray-300">21 SEP 2015</span>
                 </div>
-                <form th:if="${#authorization.expression('hasAnyAuthority(''MODERATOR'')')}" th:unless="${review.reported}" th:action="@{/reviews/report/${review.id}}" method="post">
+                <form th:if="${#authorization.expression('hasAnyAuthority(''MODERATOR'')')}" th:unless="${review.reported}" th:action="@{'/reviews/report/'+ ${review.id}}" method="post">
                     <button type="submit"><a><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="25" height="25" viewBox="0 0 256 256" xml:space="preserve">
 
 <defs>
