--- a/src/main/resources/templates/pages/reviews.html
+++ b/src/main/resources/templates/pages/reviews.html
@@ -29,7 +29,7 @@
                         </form>
 
 
-                                <a th:href="@{reviews/update/}+${review.id}">
+                        <a th:if="${#authorization.expression('hasAnyAuthority(''MODERATOR'',''ADMIN'')') or (review.user.id == user.id)}" th:href="@{reviews/update/}+${review.id}">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="25" height="25" viewBox="0 0 256 256" xml:space="preserve">
 
 <defs>
